@@ -1,0 +1,6 @@
+VERS_2.0 {
+global:
+  foo;
+local:
+  *;
+};
