@@ -1,3 +1,13 @@
+2011-09-29  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/13195
+	* ld-elf/elf.exp: Add a C link testcase for PR ld/13195.
+
+	* ld-elf/pr13195.c: New.
+	* ld-elf/pr13195.d: Likewise.
+	* ld-elf/pr13195.s: Likewise.
+	* ld-elf/pr13195.t: Likewise.
+
 2011-09-16  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* ld-elf/pr12975.d: Only run for *-*-linux* and *-*-gnu*
